# allele

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: analysis.rs  discovery.rs  lib.rs  main.rs  output.rs  types.rs
src/parsers/: ancestry.rs  ftdna.rs  mod.rs  myheritage.rs  plink.rs  tsv_parser.rs  twentythree.rs  vcf.rs
tests/: integration_test.rs
