[package]
name = "allele-compatibility"
version = "0.1.0"
edition = "2021"
authors = ["Genetic Analysis Tool"]
description = "Multithreaded allele compatibility and discovery tool"
license = "MIT"


[dependencies]
# CLI and interactive mode
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.4"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"
num_cpus = "1.16"

# File handling and parsing
walkdir = "2.4"
memmap2 = "0.9"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Data structures
hashbrown = "0.14"
dashmap = "5.5"
parking_lot = "0.12"

# Bioinformatics
bio = "1.6"
needletail = "0.5"

# Output generation
tera = "1.19"
askama = "0.12"
printpdf = "0.7"
plotters = "0.3"

# Pin time crate to avoid version conflicts
time = "0.3.36"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for external tool integration
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

# Utilities
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
zip = "0.6"

[features]
default = ["http"]
http = ["reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
